objects/Country_To_Lease_Stage__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Lease_Stage_API_Name__c</fullName>
        <label>Lease_Stage_API_Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_Green_Legend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Green Legend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Red_Legend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Red Legend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Show_Yellow_Legend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Yellow Legend</label>
        <type>Checkbox</type>
    </fields>
    <label>Country To Lease Stage Field</label>
</CustomObject>